<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2013 CellaSecure

    Licensed under the Apache License, Version 2.0 (the "License"); you may not
    use this file except in compliance with the License. You may obtain a copy of
    the License at

    http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
    WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
    License for the specific language governing permissions and limitations under
    the License.
-->
<resources>

    <!-- Titles -->

    <string name="app_name">Cella Secure</string>
    <string name="title_drive_list">Devices</string>
    <string name="title_drive_detail">Details</string>
    <string name="title_drive_connect">New Device</string>

    <!-- Menus -->

    <string name="menu_refresh_devices">Refresh Drives</string>
    <string name="menu_refresh_devices_condensed">Refresh</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_connect_drive">Add a device</string>
    <string name="drive_connect_list_title">Which device would you like to add?</string>
    <string name="drive_setup_name_hint">Unique device name</string>
    <string name="drive_setup_encryption_label">Hardware encryption</string>
    <string name="drive_setup_multi_factor_label">Multifactor authentication</string>
    <string name="drive_setup_authentication_label">Authentication options</string>
    <string name="device_manage_lock_status_locked">LOCKED</string>
    <string name="device_manage_lock_status_unlocked">UNLOCKED</string>
    <string name="drive_unlock_hint">Enter password to unlock</string>
    <string name="drive_manage_no_devices_label">No drives paired or in range!</string>
    <string name="drive_manage_new_device_hint">Have you checked that your drive is plugged in?</string>
    <string name="shared_preference_key">edu.washington.cs.cellasecure.PREFERENCE_FILE_KEY</string>
    <string name="dialog_password_input">Please enter your password:</string>
    <string name="dialog_password_ok">Submit</string>
    <string name="dialog_password_cancel">Cancel</string>
    <string name="dialog_hint_username">Username</string>
    <string name="dialog_hint_password">Password</string>
    <string name="lock_drive">Lock Drive</string>
    <string name="config_set">Set Configuration</string>
    <string name="change_password">Change Password</string>
    <string name="encryption_level_0">Encryption Level: 0</string>
    <string name="encryption_level_1">Encryption Level: 1</string>
    <string name="encryption_level_2">Encryption Level: 2</string>
    
</resources>