<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2013 CellaSecure

    Licensed under the Apache License, Version 2.0 (the "License"); you may not
    use this file except in compliance with the License. You may obtain a copy of
    the License at

    http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
    WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
    License for the specific language governing permissions and limitations under
    the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/drive_setup_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/drive_setup_name_hint" >

        <requestFocus />
    </EditText>

    <CheckBox
        android:id="@+id/drive_setup_encryption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/drive_setup_encryption_label" />

    <CheckBox
        android:id="@+id/drive_setup_multi_factor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/drive_setup_multi_factor_label" />

    <TextView
        android:id="@+id/drive_setup_authentication_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/drive_setup_authentication_label" />

    <fragment
        android:id="@+id/fragment1"
        android:name="edu.washington.cs.cellasecure.fragments.DriveAuthPreferenceFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout="@android:layout/expandable_list_content" />

</LinearLayout>